--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,24 +31,31 @@ services:
     container_name: hive
     env_file:
       - ./hadoop-hive.env
+    volumes:
+      - ./tmp:/tmp
     environment:
       HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
       SERVICE_PRECONDITION: "hive-metastore:9083"
     ports:
       - "10000:10000"
+
   hive-metastore:
     image: ghcr.io/ezynook/ezynook.github.io/app:hive-metastore
     container_name: hive2
     env_file:
       - ./hadoop-hive.env
+    volumes:
+      - ./tmp:/tmp
     command: /opt/hive/bin/hive --service metastore
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
     ports:
       - "9083:9083"
+
   hive-metastore-postgresql:
     image: ghcr.io/ezynook/ezynook.github.io/app:postgres-metastore
     container_name: postgresql
+    
   presto-coordinator:
     image: ghcr.io/ezynook/ezynook.github.io/app:prestodb
     container_name: prestodb
